# arduinoSCARA

./: README.md  invkine.py
Arduino/packetServo/: packetServo.ino
robotControl/: CMakeCache.txt  CMakeLists.txt  CommParam.h  Makefile  RobotCon.cpp  RobotCon.h  RobotKine.cpp  RobotKine.h  RobotParam.h  arduino-serial-lib.h  arduinoSCARA  axis4SCARA  axis4SCARA.c  cmake_install.cmake  link2SCARA  link2SCARA.c  main.cpp
